Bug 634197 - assert if accessible tree update triggers reflow, r=bz, davidb